--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
 
 html {
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @keyframes fadeInUp {
